client/src/pages/Login.css
#login-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background-color: #189ab4;
    flex-direction: column;
}

#logo {
    width: 192px;
    margin-bottom: 30px;
}

#inputBox {
    display: flex;
    flex-direction: column;
    align-items: center;
}

form {
    padding-bottom: 50px;
}

input {
    height: 35px;
    width: 308px;
    background: transparent;
    border-color: white;
    color: white;
    font-family: 'Poppins';
}

#userBox, #passBox {
    background-repeat: no-repeat;
    background-size: 25px, 25px;
    background-position: 8px 2px;
    padding-left: 40px;
    font-family: 'Poppins';
}

#userBox {
    background-image: url(../assets/user-icon.png);
}

#passBox {
    background-image: url(../assets/password-icon.png);
}

#button {
    padding: 7px;
    font-size: large;
    width: 308px;
    font-family: 'Poppins';
    background-color: white;
    color: #189ab4;
    border: none;
}

#bottomText {
    font-family: 'Poppins';
    color: white;
    margin: auto;
    margin-top: 5px;
    font-size: small;
    width: 308px;
    text-align: start;
}

#link {
    color: white;
    font-family: 'Poppins';
    text-decoration: none;
}

::placeholder {
    color: white;
    font-family: 'Poppins';
}

/* Light Theme Links */
#link.light {
    color: #189ab4;
}

/* Light Theme Links */
#link.light {
    color: #189ab4;
}

/* Dark Mode Styles for Login */
#login-container.dark {
    background-color: #333; /* Dark background color */
    color: #ddd; /* Light text color */
}

#inputBox.dark {
    background-color: #444; /* Darker background for the input container */
    color: #ddd; /* Light text for input container */
}

#userBox.dark, #passBox.dark {
    background-color: #555; /* Dark input fields */
    border: 1px solid #777; /* Lighter border */
    color: #ddd; /* Light text color */
}

#button.dark {
    background-color: #555; /* Dark background for button */
    color: #ddd; /* Light text for button */
}

#bottomText.dark {
    color: #ddd; /* Light text color for bottom text */
}

#link.dark {
    color: #a4defb; /* Light blue for links */
}

